# axum-template

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
