[package]
name = "axum-template"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.3", features = ["json", "macros"] }
tokio = { version = "1.44.2", features = ["full"] }
dotenv = "0.15.0"
rand = { version = "0.9.0", features = ["thread_rng"] }
serde = { version = "1.0.219", features = ["derive"] }
tower-http = { version = "0.5.0", features = ["fs"] }
